--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="rain_shape">
       <canvas id='canvas1'></canvas>
-      <script src='rain_script.js'></script>
+
 
     </div>
     <div>
@@ -43,15 +43,13 @@
           <div class="fill"></div>
         </div>
         <div class="typing-effect">
-          <p>
-            email:rong@rorong.com <br>
-            blog:https://rorong.com/
+          <p id="typewriter">
 
           </p>
         </div>
       </div>>
     </div>
-<!-- 
+    <!-- 
     <section class="seperator-wrapper">
       <div class="seperator gradient">
       </div>
@@ -67,7 +65,7 @@
         </div>
 
       </div>
-      <div class="seperator gradient">
+      <div class="seperator gradient rgb_light">
       </div>
 
       <div id="app">
@@ -85,7 +83,7 @@
 
     </div>
 
-
+    <script src='rain_script.js'></script>
     <script src="./vue.js"></script>
   </div>
 </body>
