--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>雪花燈籠Snowflake Lantern</title>
   <link rel="stylesheet" href="./rain_style.css">
+  <link rel="icon" href="./271495488_1123256705144942_6317497682441643995_n.jpg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
