--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <script src='rain_script.js'></script>
     <script src="./vue.js"></script>
   </div>
+  <img src="https://www.googleapis.com/pagespeedonline/v4/runPagespeed?url=http://rorong.com&screenshot=true" alt="Example Website Screenshot">
 </body>
 
 </html>
