--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://kit.fontawesome.com/b6b64e7e59.js" crossorigin="anonymous"></script>
 
-
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/a/AVvXsEgOUGDFuUm1D1UfT6UIcO90Sbh79qNHM-uQzsB7ltx-_sDBImK7vb9nBc2JhF7vxjfVBsTf31hZLEaUFf4GDdvcHCipJpCx9bgvMi_gwA89tNP9L-dBCZeJbdbqDEXw4nzDBwS9BnVNudq24II3jEPD_9hQsr9ib8O3ZGt0RJDlKbIWq4GKUStLgyDt" />
 
 </head>
 
